# AndroidNativeSurface

./: CMakeLists.txt  README.md
include/Android_draw/: draw.h
include/tool/: tools.h
include/widget/: widget.h
src/: surface.cpp
src/Android_draw/: draw.cpp
src/Android_touch/: touch.cpp
src/native_surface/: extern_function.cpp  utils.cpp
src/tool/: tools.cpp
src/widget/: widget.cpp
